--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.51",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0-beta.51",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/register": "^7.0.0-beta.51",
@@ -31,5 +30,10 @@
     "polymer-redux": "^1.0.5",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0"
+  },
+  "scripts": {
+      "start": "./node_modules/.bin/webpack-dev-server --open",
+      "build": "./node_modules/.bin/webpack",
+      "test": "./node_modules/.bin/karma start"
   }
 }
