--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "license" : "BSD-3-Clause",
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.51",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
