--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "polymer-3-starter-project",
+  "version": "0.0.1",
+  "description": "A starter project for polymer/redux with immutable",
+  "keywords": [
+    "webpack",
+    "saga",
+    "redux",
+    "redux-Saga",
+    "polymer",
+    "immutable"
+  ],
   "license": "BSD-3-Clause",
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.51",
@@ -9,6 +20,11 @@
     "babel-plugin-webpack-alias": "^2.1.2",
     "base-href-webpack-plugin": "^2.0.0",
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-import-resolver-webpack": "^0.10.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-polymer": "^0.2.1",
     "generate-json-webpack-plugin": "^0.3.1",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "^3.1.0",
