--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "generate-json-webpack-plugin": "^0.3.1",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "^3.1.0",
+    "jsdoc": "^3.5.5",
     "karma": "^2.0.3",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
@@ -53,6 +54,7 @@
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --open",
     "build": "./node_modules/.bin/webpack",
-    "test": "./node_modules/.bin/karma start"
+    "test": "./node_modules/.bin/karma start",
+    "documentation": "./node_modules/.bin/jsdoc -c jsdoc.conf.json"
   }
 }
