Add dynamic modules

--- a/src/.babelrc
+++ b/src/.babelrc
@@ -9,6 +9,7 @@
     ],
     "plugins": [
         "@babel/transform-runtime",
-        "webpack-alias"
+        "webpack-alias",
+        "@babel/syntax-dynamic-import"
     ]
 }
