--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "BSD-3-Clause",
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.51",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.51",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/register": "^7.0.0-beta.51",
