--- a/package.json
+++ b/package.json
@@ -18,16 +18,23 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/register": "^7.0.0-beta.51",
+    "@storybook/addon-actions": "^3.4.8",
+    "@storybook/cli": "4.0.0-alpha.10",
+    "@storybook/html": "^4.0.0-alpha.10",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-webpack-alias": "^2.1.2",
     "base-href-webpack-plugin": "^2.0.0",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-import-resolver-webpack": "^0.10.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jasmine": "^2.10.1",
     "eslint-plugin-polymer": "^0.2.1",
+    "file-loader": "^1.1.11",
     "generate-json-webpack-plugin": "^0.3.1",
+    "html-webpack-include-assets-plugin": "^1.0.4",
     "html-webpack-plugin": "^3.2.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine-core": "^3.1.0",
@@ -62,6 +69,8 @@
     "test": "./node_modules/.bin/karma start karma.test.config.js --single-run ",
     "continuous": "./node_modules/.bin/karma start karma.test.config.js --no-single-run",
     "cover": "./node_modules/.bin/karma start karma.coverage.config.js --single-run",
-    "document": "./node_modules/.bin/jsdoc -c jsdoc.config.json"
+    "document": "./node_modules/.bin/jsdoc -c jsdoc.config.json",
+    "demo": "start-storybook -p 6006",
+    "build-demo": "build-storybook"
   }
 }
