--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/register": "^7.0.0-beta.51",
     "@storybook/addon-actions": "^3.4.8",
+    "@storybook/addon-storysource": "^3.4.8",
     "@storybook/cli": "4.0.0-alpha.10",
     "@storybook/html": "^4.0.0-alpha.10",
     "babel-core": "^7.0.0-bridge.0",
