--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "open-browser-webpack-plugin": "^0.0.5",
     "source-map-loader": "^0.2.3",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
@@ -66,13 +67,13 @@
     "redux-saga": "^0.16.0"
   },
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --open",
-    "build": "./node_modules/.bin/webpack",
-    "test": "./node_modules/.bin/karma start karma.test.config.js --single-run ",
-    "continuous": "./node_modules/.bin/karma start karma.test.config.js --no-single-run",
-    "cover": "./node_modules/.bin/karma start karma.coverage.config.js --single-run",
-    "document": "./node_modules/.bin/jsdoc -c jsdoc.config.json",
-    "demo": "start-storybook -p 6006",
-    "build-demo": "build-storybook"
+    "start": "scripts/start.sh",
+    "build": "scripts/build.sh",
+    "test": "scripts/test.sh",
+    "continuous": "scripts/continuous.sh",
+    "cover": "scripts/cover.sh",
+    "document": "scripts/document.sh",
+    "demo": "scripts/demo.sh",
+    "clean": "scripts/clean.sh"
   }
 }
