--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "node-watch": "^0.5.8",
     "open-browser-webpack-plugin": "^0.0.5",
     "source-map-loader": "^0.2.3",
+    "storybook-addon-jest": "^0.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
@@ -76,6 +78,7 @@
     "cover": "scripts/cover.sh",
     "document": "scripts/document.sh",
     "demo": "scripts/demo.sh",
+    "develop": "scripts/develop.sh",
     "clean": "scripts/clean.sh"
   }
 }
