--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/register": "^7.0.0-beta.51",
-    "@storybook/addon-actions": "^3.4.8",
-    "@storybook/addon-storysource": "^3.4.8",
-    "@storybook/cli": "4.0.0-alpha.10",
-    "@storybook/html": "^4.0.0-alpha.10",
+    "@storybook/addon-actions": "^4.0.0-alpha.12",
+    "@storybook/addon-notes": "^4.0.0-alpha.12",
+    "@storybook/addon-storysource": "^4.0.0-alpha.12",
+    "@storybook/cli": "4.0.0-alpha.12",
+    "@storybook/html": "^4.0.0-alpha.12",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-webpack-alias": "^2.1.2",
