--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "karma-webpack": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-watch": "^0.5.8",
+    "null-loader": "^0.1.1",
     "open-browser-webpack-plugin": "^0.0.5",
     "source-map-loader": "^0.2.3",
     "storybook-addon-jest": "^0.0.1",
