--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/register": "^7.0.0-beta.51",
+    "@storybook/addon-a11y": "^3.4.8",
     "@storybook/addon-actions": "^4.0.0-alpha.12",
     "@storybook/addon-notes": "^4.0.0-alpha.12",
     "@storybook/addon-storysource": "^4.0.0-alpha.12",
