--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-webpack-alias": "^2.1.2",
     "base-href-webpack-plugin": "^2.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
