Improvements in config

--- a/src/.babelrc
+++ b/src/.babelrc
@@ -7,6 +7,7 @@
         }]
     ],
     "plugins": [
+        "transform-undefined-to-void",
         "@babel/transform-runtime",
         "webpack-alias",
         "@babel/syntax-dynamic-import"
