--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/html": "^4.0.0-alpha.12",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta",
+    "babel-plugin-transform-undefined-to-void": "^6.9.4",
     "babel-plugin-webpack-alias": "^2.1.2",
     "base-href-webpack-plugin": "^2.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
