--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "generate-json-webpack-plugin": "^0.3.1",
+    "glob": "^7.1.2",
     "html-webpack-include-assets-plugin": "^1.0.4",
     "html-webpack-plugin": "^3.2.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine-core": "^3.1.0",
     "jsdoc": "^3.5.5",
     "jsdoc-webpack4-plugin": "^0.0.2",
+    "json5": "^1.0.1",
     "karma": "^2.0.3",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
