--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-import-resolver-webpack": "^0.10.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jasmine": "^2.10.1",
     "eslint-plugin-polymer": "^0.2.1",
     "extract-loader": "^2.0.1",
@@ -49,6 +49,7 @@
     "jsdoc": "^3.5.5",
     "jsdoc-webpack4-plugin": "^0.0.2",
     "json5": "^1.0.1",
+    "json5-loader": "^1.0.1",
     "karma": "^2.0.3",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
