--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "open-browser-webpack-plugin": "^0.0.5",
     "source-map-loader": "^0.2.3",
     "storybook-addon-jest": "^0.0.1",
+    "translate-webpack-plugin": "^0.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
