--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "open-browser-webpack-plugin": "^0.0.5",
     "source-map-loader": "^0.2.3",
     "storybook-addon-jest": "^0.0.1",
-    "translate-webpack-plugin": "^0.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
@@ -75,6 +74,8 @@
     "@polymer/app-route": "^3.0.0-pre.21",
     "@polymer/polymer": "^3.0.2",
     "@webcomponents/webcomponentsjs": "^2.0.2",
+    "@zakkudo/translate-webpack-plugin": "^0.0.3",
+    "@zakkudo/translator": "^0.0.1",
     "deep-equal": "^1.0.1",
     "immutable": "^3.8.2",
     "polymer-redux": "^1.0.5",
