--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "@polymer/app-route": "^3.0.0-pre.21",
     "@polymer/polymer": "^3.0.2",
     "@webcomponents/webcomponentsjs": "^2.0.2",
+    "@zakkudo/jsdoc-polymer-plugin": "^0.0.1",
+    "@zakkudo/jsdoc-redux-plugin": "^0.0.1",
     "@zakkudo/translate-webpack-plugin": "^0.0.3",
     "@zakkudo/translator": "^0.0.1",
     "deep-equal": "^1.0.1",
