--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@storybook/addon-storysource": "^4.0.0-alpha.12",
     "@storybook/cli": "4.0.0-alpha.12",
     "@storybook/html": "^4.0.0-alpha.12",
+    "@zakkudo/jsdoc-polymer-plugin": "^0.0.2",
+    "@zakkudo/jsdoc-redux-plugin": "^0.0.2",
+    "@zakkudo/translate-webpack-plugin": "^0.0.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-transform-undefined-to-void": "^6.9.4",
@@ -74,16 +77,12 @@
     "@polymer/app-route": "^3.0.0-pre.21",
     "@polymer/polymer": "^3.0.2",
     "@webcomponents/webcomponentsjs": "^2.0.2",
-    "@zakkudo/jsdoc-polymer-plugin": "^0.0.1",
-    "@zakkudo/jsdoc-redux-plugin": "^0.0.1",
-    "@zakkudo/translate-webpack-plugin": "^0.0.3",
     "@zakkudo/translator": "^0.0.1",
     "deep-equal": "^1.0.1",
     "immutable": "^3.8.2",
     "polymer-redux": "^1.0.5",
     "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
-    "y18n": "^4.0.0"
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "scripts/start.sh",
