--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@storybook/addon-storysource": "^4.0.0-alpha.12",
     "@storybook/cli": "4.0.0-alpha.12",
     "@storybook/html": "^4.0.0-alpha.12",
+    "@zakkudo/jsdoc-immutable-plugin": "^0.0.1",
     "@zakkudo/jsdoc-polymer-plugin": "^0.0.2",
     "@zakkudo/jsdoc-redux-plugin": "^0.0.2",
     "@zakkudo/translate-webpack-plugin": "^0.0.3",
