Move actions into it's own library.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@zakkudo/jsdoc-native-plugin": "^0.0.1",
     "@zakkudo/jsdoc-polymer-plugin": "^0.0.2",
     "@zakkudo/jsdoc-redux-plugin": "^0.0.2",
-    "@zakkudo/translate-webpack-plugin": "^0.0.3",
+    "@zakkudo/translate-webpack-plugin": "^0.0.8",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-transform-undefined-to-void": "^6.9.4",
@@ -79,7 +79,8 @@
     "@polymer/app-route": "^3.0.0-pre.21",
     "@polymer/polymer": "^3.0.2",
     "@webcomponents/webcomponentsjs": "^2.0.2",
-    "@zakkudo/translator": "^0.0.1",
+    "@zakkudo/actions": "^0.0.4",
+    "@zakkudo/translator": "^0.0.3",
     "deep-equal": "^1.0.1",
     "immutable": "^3.8.2",
     "polymer-redux": "^1.0.5",
