Update to latest version of translator packages

--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@storybook/addon-storysource": "^4.0.0-alpha.12",
     "@storybook/cli": "4.0.0-alpha.12",
     "@storybook/html": "^4.0.0-alpha.12",
-    "@zakkudo/jsdoc-immutable-plugin": "../jsdoc-immutable-plugin/",
+    "@zakkudo/jsdoc-immutable-plugin": "^0.0.6",
     "@zakkudo/jsdoc-native-plugin": "^0.0.1",
     "@zakkudo/jsdoc-polymer-plugin": "^0.0.2",
-    "@zakkudo/jsdoc-redux-plugin": "../jsdoc-redux-plugin/",
+    "@zakkudo/jsdoc-redux-plugin": "0.0.8",
+    "@zakkudo/translate-webpack-plugin": "^0.2.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-transform-undefined-to-void": "^6.9.4",
@@ -78,9 +79,8 @@
     "@polymer/app-route": "^3.0.0-pre.21",
     "@polymer/polymer": "^3.0.2",
     "@webcomponents/webcomponentsjs": "^2.0.2",
-    "@zakkudo/actions": "^0.0.4",
-    "@zakkudo/translate-webpack-plugin": "^0.0.12",
-    "@zakkudo/translator": "^0.0.7",
+    "@zakkudo/actions": "^0.0.13",
+    "@zakkudo/translator": "^0.2.1",
     "deep-equal": "^1.0.1",
     "immutable": "^3.8.2",
     "polymer-redux": "^1.0.5",
