--- a/package.json
+++ b/package.json
@@ -14,79 +14,79 @@
   ],
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.4.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/register": "^7.0.0-beta.51",
-    "@storybook/addon-a11y": "^4.1.11",
-    "@storybook/addon-actions": "^4.1.11",
-    "@storybook/addon-notes": "^4.1.11",
-    "@storybook/addon-storysource": "^4.1.11",
-    "@storybook/cli": "4.1.11",
-    "@storybook/html": "^4.1.11",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/register": "^7.4.0",
+    "@storybook/addon-a11y": "^5.0.6",
+    "@storybook/addon-actions": "^5.0.6",
+    "@storybook/addon-notes": "^5.0.6",
+    "@storybook/addon-storysource": "^5.0.6",
+    "@storybook/cli": "5.0.6",
+    "@storybook/html": "^5.0.6",
     "@zakkudo/jsdoc-immutable-plugin": "^0.0.6",
     "@zakkudo/jsdoc-native-plugin": "^0.0.3",
     "@zakkudo/jsdoc-polymer-plugin": "^0.0.3",
     "@zakkudo/jsdoc-redux-plugin": "0.0.8",
-    "@zakkudo/translate-webpack-plugin": "^0.3.0",
+    "@zakkudo/translate-webpack-plugin": "../translate-webpack-plugin/build/",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-undefined-to-void": "^6.9.4",
     "babel-plugin-webpack-alias": "^2.1.2",
     "base-href-webpack-plugin": "^2.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.12.1",
+    "copy-webpack-plugin": "^5.0.2",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
     "eslint-import-resolver-webpack": "^0.11.0",
-    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jasmine": "^2.10.1",
-    "eslint-plugin-polymer": "^0.2.1",
+    "eslint-plugin-polymer": "^0.4.0",
     "extract-loader": "^3.1.0",
     "file-loader": "^3.0.1",
     "generate-json-webpack-plugin": "^0.3.1",
-    "glob": "^7.1.2",
+    "glob": "^7.1.3",
     "html-webpack-include-assets-plugin": "^1.0.7",
     "html-webpack-plugin": "^3.2.0",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine-core": "^3.1.0",
+    "jasmine-core": "^3.4.0",
     "jsdoc": "^3.5.5",
     "jsdoc-webpack4-plugin": "^0.0.2",
     "json5": "^2.1.0",
-    "json5-loader": "^1.0.1",
-    "karma": "^4.0.0",
+    "json5-loader": "^2.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^2.0.1",
     "karma-json-result-reporter": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^3.0.5",
     "mini-css-extract-plugin": "^0.5.0",
     "node-watch": "^0.6.0",
     "null-loader": "^0.1.1",
     "open-browser-webpack-plugin": "^0.0.5",
-    "source-map-loader": "^0.2.3",
+    "source-map-loader": "^0.2.4",
     "storybook-addon-jest": "^0.0.1",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "write-file-webpack-plugin": "^4.3.2"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
+    "write-file-webpack-plugin": "^4.5.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.3.1",
-    "@polymer/app-route": "^3.0.0-pre.21",
-    "@polymer/polymer": "^3.0.2",
-    "@webcomponents/webcomponentsjs": "^2.2.4",
+    "@babel/runtime": "^7.4.3",
+    "@polymer/app-route": "^3.0.2",
+    "@polymer/polymer": "^3.2.0",
+    "@webcomponents/webcomponentsjs": "^2.2.7",
     "@zakkudo/actions": "^1.1.0",
-    "@zakkudo/translator": "^0.2.1",
+    "@zakkudo/translator": "../translator/build/",
     "deep-equal": "^1.0.1",
     "immutable": "^4.0.0-rc.12",
     "polymer-redux": "^1.0.5",
-    "redux": "^4.0.0",
-    "redux-saga": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^2.1.1"
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
+    "uglifyjs-webpack-plugin": "^2.1.2"
   },
   "scripts": {
     "start": "scripts/start.sh",
